# Python-Basic-Learning

pythonbasic/: etl.py  excel para csv com tratamento simples para le.ipynb  pipeline.py  pyproject.toml
pythonbasic/data/: output.csv
